# dissertation

./: .gitignore  Presentation.pptx  README.md  contract.sol  notes.md
arduino/: debug_opts.txt  sketch.ino
arduino/data/: index.html  secrets.txt
arduino/front-end/: index.html
arduino/sketch_dec28a/: sketch_dec28a.ino
attestation_server/: pom.xml
certificates/ca/: ca.srl
cloudapps/: create.sql  docker-compose.yml  package.sh  start.bat
compile-libs/: CMakeLists.txt  sdkconfig  sdkconfig.old
docs/: dissertation-curpins.docx  dissertation.docx  presentation.pptx  presentation4.pptx  ~$ssertation.docx  ~WRL0004.tmp  ~WRL0438.tmp  ~WRL2372.tmp
docs_misc/: arch overview.drawio  contract_params.txt  dissertation.docx  function_encoding.txt  generate_server_cert.txt  metamask.txt  node_protocols.md  notes.md  private_key.txt  send_overview.drawio  to_write.md  todo.txt
esp/: CMakeLists.txt  platformio.ini  sdkconfig  sdkconfig.esp32doit-devkit-v1
esp-arduino/: platformio.ini
esp-back2/: partitions_custom.csv  sdkconfig
esp-both/: CMakeLists.txt  Makefile  partitions_custom.csv  sdkconfig  sdkconfig.old
esp-both/components/AsyncWebServer/: CMakeLists.txt
esp/data/: ca.pem
esp_secure_node/: partitions_custom.csv  sdkconfig
esp_secure_node/components/Web3E/: CMakeLists.txt  Contract.cpp  Contract.h  KeyID.h  Web3.cpp  Web3.h
esp_secure_node/components/net-utils/: CMakeLists.txt  net_utils.cpp  net_utils.h
mosquitto_configs/: mosquitto.conf
oci-instance/: private.key  private.ppk  public.key
static/: config_index.html
vault/: vault.conf
(+465 files in other folders)
